--- a/frontend/main-page/main-page.css
+++ b/frontend/main-page/main-page.css
@@ -1,11 +1,11 @@
 body {
-    background-color: darkmagenta;
+    background-color: darkorange;
 }
 
 .page-title {
-    width: 30%;
+    width: 40%;
     margin: 150px auto 0 auto;
-    
+   
     text-align: center;
     font-size: 5.65rem;
     color: white;
@@ -16,7 +16,36 @@ body {
     margin: 100px auto 0 auto;
 }
 
+.drum-instruments-table-body {
+    background-color: #ffffff40;
+}
+
+.drum-instruments-image-container {
+    width: 215px;
+    height: 215px;
+    background-color: #ffffff8c;
+}
+
+.drum-instruments-image-container:hover {
+    background-color: #ffffff40;
+}
+
+
 .drum-instruments-image {
     width: 200px;
     height: 200px;
+    
+    position: relative;
+    top: 7.5px;
+    left: 7.5px;
+}
+
+.drum-instruments-table-foot {
+    background-color: #ffffff40;
+    text-align: center;
+}
+
+.drum-instruments-button-label {
+    font-style: oblique;
+    font-size: 30px;
 }
