--- a/frontend/main-page/main-page.css
+++ b/frontend/main-page/main-page.css
@@ -12,8 +12,9 @@ body {
 }
 
 .drum-instruments-container {
-    width: 80%;
-    margin: 100px auto 0 auto;
+    width: 93.75rem;
+    height: 50rem;
+    margin: 100px auto auto auto;
 }
 
 .drum-instruments-table-body {
